--- a/logistica.html
+++ b/logistica.html
@@ -122,24 +122,24 @@
           <!-- Sidebar Column -->
           <div class="col-lg-3 mb-4">
             <div id="menu">
-              <ul class="nav nav-pills flex-column">
-                <li class="nav-item active">
+              <ul id="list" class="nav nav-pills flex-column">
+                <li class="nav-item ">
                   <a class="nav-link font-weight-bold" href="#item-1">Participación</a>
                   <ul class="nav nav-pills flex-column ">
                     <li class="nav-item">
-                      <a class="nav-link ml-3 my-1 " href="#item-1-1">Dinamica del evento</a>
+                      <a class="nav-link ml-3 my-1" href="#item-1-1">Dinamica del evento</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link ml-3 my-1 " href="#item-1-2">Cuota de Participación</a>
+                      <a class="nav-link ml-3 my-1" href="#item-1-2">Cuota de Participación</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link ml-3 my-1 " href="#item-1-3">Contenido de Paquetes</a>
+                      <a class="nav-link ml-3 my-1" href="#item-1-3">Contenido de Paquetes</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link ml-3 my-1 " href="#item-1-4">Formas de Pago</a>
+                      <a class="nav-link ml-3 my-1" href="#item-1-4">Formas de Pago</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link ml-3 my-1 " href="#item-1-5">Formas de Participación</a>
+                      <a class="nav-link ml-3 my-1" href="#item-1-5">Formas de Participación</a>
                     </li>
                   </ul>
 
@@ -156,10 +156,10 @@
                   <a class="nav-link font-weight-bold" href="#item-4">Información de Viaje</a>
                   <ul class="nav nav-pills flex-column ">
                     <li class="nav-item">
-                      <a class="nav-link ml-3 my-1 " href="#item-4-1">Aire</a>
+                      <a class="nav-link ml-3 my-1" href="#item-4-1">Aire</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link ml-3 my-1 " href="#item-4-2">Tierra</a>
+                      <a class="nav-link ml-3 my-1" href="#item-4-2">Tierra</a>
                     </li>
                   </ul>
                 </li>
@@ -168,13 +168,13 @@
                   <a class="nav-link font-weight-bold" href="#item-5">Movilización</a>
                   <ul class="nav nav-pills flex-column ">
                     <li class="nav-item">
-                      <a class="nav-link ml-3 my-1 " href="#item-5-1">Servicio de Autobuses</a>
+                      <a class="nav-link ml-3 my-1" href="#item-5-1">Servicio de Autobuses</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link ml-3 my-1 " href="#item-5-2">Servicio de Taxi</a>
+                      <a class="nav-link ml-3 my-1" href="#item-5-2">Servicio de Taxi</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link ml-3 my-1 " href="#item-5-3">Servicio UBER</a>
+                      <a class="nav-link ml-3 my-1" href="#item-5-3">Servicio UBER</a>
                     </li>
                   </ul>
                 </li>
@@ -183,19 +183,19 @@
                   <a class="nav-link font-weight-bold" href="#item-6">Información de El Salvador</a>
                   <ul class="nav nav-pills flex-column ">
                     <li class="nav-item">
-                      <a class="nav-link ml-3 my-1 " href="#item-6-1">Moneda Local</a>
+                      <a class="nav-link ml-3 my-1" href="#item-6-1">Moneda Local</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link ml-3 my-1 " href="#item-6-2">Electricidad</a>
+                      <a class="nav-link ml-3 my-1" href="#item-6-2">Electricidad</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link ml-3 my-1 " href="#item-6-3">Hospitales</a>
+                      <a class="nav-link ml-3 my-1" href="#item-6-3">Hospitales</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link ml-3 my-1 " href="#item-6-4">Telefonia</a>
+                      <a class="nav-link ml-3 my-1" href="#item-6-4">Telefonia</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link ml-3 my-1 " href="#item-6-5">Gastronomia</a>
+                      <a class="nav-link ml-3 my-1" href="#item-6-5">Gastronomia</a>
                     </li>
                   </ul>
 
@@ -302,7 +302,9 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="../js/Templates.js">
 
+    </script>
 
   </body>
 
