--- a/ejes-tematicos.html
+++ b/ejes-tematicos.html
@@ -25,51 +25,51 @@
   <body>
 
     <!-- Barra de Navegacion -->
+    <!-- Barra de Navegacion -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-          <a class="navbar-brand" href="index.html">
-            X ECSL -2018
-          </a>
-          <!-- <img src="img/Logo.png" width="70" height="40" class="d-inline-block" alt=""> -->
+        <a class="navbar-brand d-none d-md-block" href="index.html">X Encuentro Centroamericano de Software Libre - 2018</a>
+        <a class="navbar-brand d-md-none" href="index.html">X ECSL - 2018</a>
+        <!-- <img src="img/Logo.png" width="70" height="40" class="d-inline-block" alt=""> -->
 
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
 
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
 
-              <li class="nav-item dropdown">
-                <a class="nav-link active dropdown-toggle" href="#" id="navbarinfo" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Información General
-                </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarinfo">
-                  <a class="dropdown-item" href="logistica.html"><i class="fa fa-info-circle" aria-hidden="true"></i> Logística</a>
-                  <a class="dropdown-item" href="faq.html"><i class="fa fa-question-circle-o" aria-hidden="true"></i> Preguntas Frecuentes</a>
-                </div>
-              </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarinfo" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Información General
+                  </a>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarinfo">
+                <a class="dropdown-item" href="logistica.html"><i class="fa fa-info-circle" aria-hidden="true"></i> Logística</a>
+                <a class="dropdown-item" href="faq.html"><i class="fa fa-question-circle-o" aria-hidden="true"></i> Preguntas Frecuentes</a>
+              </div>
+            </li>
 
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarEvento" data-toggle="dropdown"  role="button" aria-haspopup="true" aria-expanded="false">
-                  Evento
-                </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarEvento">
-                  <a class="dropdown-item" href="index.html"><i class="fa fa-address-card-o" aria-hidden="true"></i> Registro</a>
-                  <a class="dropdown-item" href="logistica.html"><i class="fa fa-list-ul" aria-hidden="true"></i> Ejes Temáticos</a>
-                  <a class="dropdown-item" href="faq.html"><i class="fa fa-calendar" aria-hidden="true"></i>  Agenda</a>
-                </div>
-              </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle " href="#" id="navbarEvento" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                    Evento
+                  </a>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarEvento">
+                <a class="dropdown-item" href="registro.html"><i class="fa fa-address-card-o" aria-hidden="true"></i> Registro</a>
+                <a class="dropdown-item" href="ejes-tematicos.html"><i class="fa fa-list-ul" aria-hidden="true"></i> Ejes Temáticos</a>
+                <a class="dropdown-item" href="agenda.html"><i class="fa fa-calendar" aria-hidden="true"></i>  Agenda</a>
+              </div>
+            </li>
 
-              <li class="nav-item">
-                <a class="nav-link" href="eventos-anteriores.html">Eventos Anteriores</a>
-              </li>
+            <li class="nav-item">
+              <a class="nav-link" href="eventos-anteriores.html">Eventos Anteriores</a>
+            </li>
 
-              <li class="nav-item dropdown">
-                <a class="nav-link" href="#" data-toggle="modal" data-target="#Contact"  role="button" >Contacto</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link" href="#" data-toggle="modal" data-target="#Contact" role="button">Contacto</a>
 
-              </li>
-            </ul>
-          </div>
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
 
@@ -117,10 +117,32 @@
       </ol>
 
 
-      <div class="container ">
+      <!--Indice de los ejes temáticos -->
+      <div class="portafolio-item d-lg-none">
+        <div id="main-theme" class="list-group">
+          <a class="list-group-item font-weight-bold" href="#main-theme-1">
+            EJE TEMÁTICO #1: Aportemos al desarrollo de más y mejor software libre.</a>
+          <a class="list-group-item font-weight-bold" href="#main-theme-2">
+            EJE TEMÁTICO #2: Desarrollemos y conozcamos más sobre hardware libre.</a>
+          <a class="list-group-item font-weight-bold" href="#main-theme-3">
+            EJE TEMÁTICO #3: Liberemos espacios en la web con software libre.</a>
+          <a class="list-group-item font-weight-bold" href="#main-theme-4">
+            EJE TEMÁTICO #4: Usemos geotecnologías libres para la gestión de información geográficas.</a>
+          <a class="list-group-item font-weight-bold" href="#main-theme-5">
+            EJE TEMÁTICO #5: Seamos una comunidad más inclusiva y diversa.</a>
+          <a class="list-group-item font-weight-bold" href="#main-theme-6">
+            EJE TEMÁTICO #6: Democraticemos los medios de comunicación con el apoyo del software libre.</a>
+          <a class="list-group-item font-weight-bold" href="#main-theme-7">
+            EJE TEMÁTICO #7: Fortalezcamos la comunidad centroamericana de software libre.</a>
+          <a class="list-group-item font-weight-bold" href="#main-theme-8">
+            EJE TEMÁTICO #8: Abramos un espacio de desconferencia.</a>
+        </div>
+      </div>
+
+      <div class="container " data-spy="scroll" data-target="#main-theme" data-offset="0">
 
         <!-- Eje Uno -->
-        <div>
+        <div class="right-block" id="main-theme-1">
           <div class="row bg-light font-weight-bold text-center align-middle" >
             <div class="col-md-12 border p-3">EJE TEMÁTICO #1: Aportemos al desarrollo de más y mejor software libre.</div>
           </div>
@@ -169,7 +191,7 @@
         </div>
 
         <!-- Eje Dos -->
-        <div>
+        <div class="right-block" id="main-theme-2">
           <div class="row bg-light font-weight-bold text-center align-middle" >
             <div class="col-md-12 border p-3">EJE TEMÁTICO #2: Desarrollemos y conozcamos más sobre hardware libre.</div>
           </div>
@@ -216,7 +238,7 @@
         </div>
 
         <!-- Eje Tres -->
-        <div>
+        <div class="right-block" id="main-theme-3">
           <div class="row bg-light font-weight-bold text-center align-middle" >
             <div class="col-md-12 border p-3">EJE TEMÁTICO #3: Liberemos espacios en la web con software libre.</div>
           </div>
@@ -263,7 +285,7 @@
         </div>
 
         <!-- Eje Cuatro -->
-        <div>
+        <div class="right-block" id="main-theme-4">
           <div class="row bg-light font-weight-bold text-center align-middle" >
             <div class="col-md-12 border p-3">EJE TEMÁTICO #4: Usemos geotecnologías libres para la gestión de información geográficas.</div>
           </div>
@@ -312,7 +334,7 @@
         </div>
 
         <!-- Eje Cinco -->
-        <div>
+        <div class="right-block" id="main-theme-5">
           <div class="row bg-light font-weight-bold text-center align-middle" >
             <div class="col-md-12 border p-3">EJE TEMÁTICO #5: Seamos una comunidad más inclusiva y diversa.</div>
           </div>
@@ -352,7 +374,7 @@
         </div>
 
         <!-- Eje Seis -->
-        <div>
+        <div class="right-block" id="main-theme-6">
           <div class="row bg-light font-weight-bold text-center align-middle" >
             <div class="col-md-12 border p-3">EJE TEMÁTICO #6: Democraticemos los medios de comunicación con el apoyo del software libre.</div>
           </div>
@@ -392,7 +414,7 @@
         </div>
 
         <!-- Eje Siete -->
-        <div>
+        <div class="right-block" id="main-theme-7">
           <div class="row bg-light font-weight-bold text-center align-middle" >
             <div class="col-md-12 border p-3">EJE TEMÁTICO #7: Fortalezcamos la comunidad centroamericana de software libre.</div>
           </div>
@@ -433,7 +455,7 @@
         </div>
 
         <!-- Eje Ocho -->
-        <div>
+        <div class="right-block" id="main-theme-8">
           <div class="row bg-light font-weight-bold text-center align-middle" >
             <div class="col-md-12 border p-3">EJE TEMÁTICO #8: Abramos un espacio de desconferencia.</div>
           </div>
@@ -468,6 +490,12 @@
     </div>
     <!-- /.container -->
 
+    <!-- back-to-top-botton-->
+    <div>
+    <span class="back-to-top"><i class="fa fa-arrow-circle-up"></i></span>
+    </div>
+
+
     <!-- Pie de Pagina -->
     <footer class="py-5 bg-dark">
       <div class="container">
@@ -483,6 +511,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <!-- <script type="text/javascript" src="./js/functionalities.js"></script> -->
 
   </body>
 
