--- a/logistica.html
+++ b/logistica.html
@@ -104,110 +104,69 @@
   <!-- Page Content -->
   <div class="container">
 
-    <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">Logística</h1>
+    <div class="d-block d-lg-none">
+      <!-- Page Heading/Breadcrumbs -->
+      <h1 class="mt-4 mb-3">Logística</h1>
 
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item">
-        <a href="index.html"><i class="fa fa-home" aria-hidden="true"></i> Inicio</a>
-      </li>
-      <li class="breadcrumb-item active">Logística</li>
-    </ol>
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+          <a href="index.html"><i class="fa fa-home" aria-hidden="true"></i> Inicio</a>
+        </li>
+        <li class="breadcrumb-item active">Logística</li>
+      </ol>
+    </div>
 
     <!-- Content Row -->
     <div class="row">
 
       <!-- Sidebar Column -->
-      <div class="col-lg-3 mb-4 ">
-        <div id="menu" class="">
-          <ul id="list" class="nav nav-pills flex-column">
-            <li class="nav-item ">
-              <a class="nav-link font-weight-bold" href="#item-1">Participación</a>
-              <ul class="nav nav-pills flex-column ">
-                <li class="nav-item">
-                  <a class="nav-link ml-3 my-1" href="#item-1-1">Dinamica del evento</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link ml-3 my-1" href="#item-1-2">Cuota de Participación</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link ml-3 my-1" href="#item-1-3">Contenido de Paquetes</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link ml-3 my-1" href="#item-1-4">Formas de Pago</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link ml-3 my-1" href="#item-1-5">Formas de Participación</a>
-                </li>
-              </ul>
+      <div class="col-lg-3 my-4 side-bar ">
+          <div class="" id="sideLogistica">
+            <div class="card">
+              <div class="btn btn-lg p-2 " id="headingParticipation" data-toggle="collapse" data-target="#collapseParticipation" aria-expanded="true">
+                <p class="font-weight-bold text-primary m-0">Participación</p>
+              </div>
 
-            </li>
-            <li class="nav-item">
-              <a class="nav-link font-weight-bold" href="#item-2">Hospedaje</a>
-            </li>
+              <div id="collapseParticipation" class="collapse show" aria-labelledby="headingParticipation" data-parent="#sideLogistica">
+                <div class="card-body p-0">
+                  <div class="list-group m-0">
+                    <a href="#item-1-1" class="list-group-item list-group-item-action text-primary">Dinámica del evento</a>
+                    <a href="#" class="list-group-item list-group-item-action text-primary">Cuota de participación</a>
+                    <a href="#" class="list-group-item list-group-item-action text-primary">Paquetes en Swag</a>
+                    <a href="#" class="list-group-item list-group-item-action text-primary">Forma de pago</a>
+                    <a href="#" class="list-group-item list-group-item-action text-primary">Formas de participación</a>
+                  </div>
+                </div>
+              </div>
+            </div>
 
-            <li class="nav-item">
-              <a class="nav-link font-weight-bold" href="#item-3">Sede</a>
-            </li>
+            <div class="card">
+                <a href= "#item-2" class="btn btn-lg p-2">
+                  <div class="font-weight-bold text-primary m-0" id="headingHospedaje" data-toggle="collapse" data-target="#collapseHospedaje" aria-expanded="true">
+                    Hospedaje  </div>
+                </a>
+            </div>
 
-            <li class="nav-item">
-              <a class="nav-link font-weight-bold" href="#item-4">Información de Viaje</a>
-              <ul class="nav nav-pills flex-column ">
-                <li class="nav-item">
-                  <a class="nav-link ml-3 my-1" href="#item-4-1">Aire</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link ml-3 my-1" href="#item-4-2">Tierra</a>
-                </li>
-              </ul>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link font-weight-bold" href="#item-5">Movilización</a>
-              <ul class="nav nav-pills flex-column ">
-                <li class="nav-item">
-                  <a class="nav-link ml-3 my-1" href="#item-5-1">Servicio de Autobuses</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link ml-3 my-1" href="#item-5-2">Servicio de Taxi</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link ml-3 my-1" href="#item-5-3">Servicio UBER</a>
-                </li>
-              </ul>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link font-weight-bold" href="#item-6">Información de El Salvador</a>
-              <ul class="nav nav-pills flex-column ">
-                <li class="nav-item">
-                  <a class="nav-link ml-3 my-1" href="#item-6-1">Moneda Local</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link ml-3 my-1" href="#item-6-2">Electricidad</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link ml-3 my-1" href="#item-6-3">Hospitales</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link ml-3 my-1" href="#item-6-4">Telefonia</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link ml-3 my-1" href="#item-6-5">Gastronomia</a>
-                </li>
-              </ul>
-
-            </li>
-
-          </ul>
         </div>
       </div>
 
       <!-- Content Column -->
-      <div class="col-lg-9 mb-4">
-        <div data-spy="scroll" data-target="#menu" data-offset="0">
+      <div class="col-lg-9 offset-lg-3 mb-4">
+        <div data-spy="scroll" data-target="#sideLogistica" data-offset="0">
 
-          <div id="item-1">
+          <div class="d-none d-lg-block">
+            <!-- Page Heading/Breadcrumbs -->
+            <h1 class="mt-4 mb-3">Logística</h1>
+
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item">
+                <a href="index.html"><i class="fa fa-home" aria-hidden="true"></i> Inicio</a>
+              </li>
+              <li class="breadcrumb-item active">Logística</li>
+            </ol>
+          </div>
+
+          <div id="item-1" class="right-block">
             <h1 class="display-4">Item 1 </h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, et temporibus, facere perferendis veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate dolores iure maxime ducimus fugit.Quis
               anim sit do amet fugiat dolor velit sit ea ea do reprehenderit culpa duis. Nostrud aliqua ipsum fugiat minim proident occaecat excepteur aliquip culpa aute tempor reprehenderit. Deserunt tempor mollit elit ex pariatur dolore velit fugiat
@@ -217,7 +176,7 @@
               culpa aute tempor reprehenderit. Deserunt tempor mollit elit ex pariatur dolore velit fugiat mollit culpa irure ullamco veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate dolores iure
               maxime ducimus fugit.</p>
 
-            <div id="item-1-1">
+            <div id="item-1-1" class="right-block">
               <h1 class="display-6">Item 1-1 </h1>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, et temporibus, facere perferendis veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate dolores iure maxime ducimus fugit.Quis
                 anim sit do amet fugiat dolor velit sit ea ea do reprehenderit culpa duis. Nostrud aliqua ipsum fugiat minim proident occaecat excepteur aliquip culpa aute tempor reprehenderit. Deserunt tempor mollit elit ex pariatur dolore velit fugiat
@@ -227,7 +186,7 @@
 
           </div>
 
-          <div id="item-2">
+          <div id="item-2" class="right-block">
             <h1 class="display-4">Item 2 </h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, et temporibus, facere perferendis veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate dolores iure maxime ducimus fugit.Quis
               anim sit do amet fugiat dolor velit sit ea ea do reprehenderit culpa duis. Nostrud aliqua ipsum fugiat minim proident occaecat excepteur aliquip culpa aute tempor reprehenderit. Deserunt tempor mollit elit ex pariatur dolore velit fugiat
@@ -237,7 +196,7 @@
               culpa aute tempor reprehenderit. Deserunt tempor mollit elit ex pariatur dolore velit fugiat mollit culpa irure ullamco veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate dolores iure
               maxime ducimus fugit.</p>
           </div>
-          <div id="item-3">
+          <div id="item-3" class="right-block">
             <h1 class="display-4">Item 3 </h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, et temporibus, facere perferendis veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate dolores iure maxime ducimus fugit.Quis
               anim sit do amet fugiat dolor velit sit ea ea do reprehenderit culpa duis. Nostrud aliqua ipsum fugiat minim proident occaecat excepteur aliquip culpa aute tempor reprehenderit. Deserunt tempor mollit elit ex pariatur dolore velit fugiat
