--- a/logistica.html
+++ b/logistica.html
@@ -120,7 +120,7 @@
     <div class="row">
 
       <!-- Sidebar Column -->
-      <div id="ppal" class="col-lg-3 m-2 p-0 side-bar border rounded">
+      <div class="col-lg-3 m-2 p-0 border rounded side-bar">
           <div class="" id="sideLogistica">
             <!-- Participacion -->
             <div class="card border-0">
@@ -301,7 +301,7 @@
           </div>
 
           <div id="participacion" class="right-block">
-            <h3 class="font-weight-bold">Participación:</h3>
+            <h3 class="font-weight-bold">Participación</h3>
             <p class="text-justify">El Encuentro Centroamericano de Software Libre (ECSL) es un evento anual organizado por la Comunidad
                Software Libre Centroamérica (SLCA). Reúne a representantes de comunidades de los siete países de la
                región, donde se intercambian experiencias, se comparte conocimiento, se promueven proyectos gestionados
@@ -321,7 +321,7 @@
             </div>
 
             <div id="dinamica-del-evento" class="right-block">
-              <h4 class="display-6 font-italic font-weight-bold">Dinámica del Evento:</h4>
+              <h4 class="display-6 font-italic font-weight-bold">Dinámica del Evento</h4>
               <p>La agenda de actividades se extiende hasta los horarios nocturnos, por lo que es indispensable que quienes se
                 inscriban sean mayores de edad o estén acompañados de sus tutores legales.</p>
 
@@ -336,106 +336,124 @@
 
 
           <div id="cuota-de-participacion" class="right-block">
-            <h4 class="display-6 font-italic font-weight-bold">Cuota de Participación:</h4>
+            <h4 class="display-6 font-italic font-weight-bold">Cuota de Participación</h4>
             <!-- Content Row -->
             <div class="row">
               <div class="col-md-4 mb-4">
-                <div class="card h-100">
+                <div class="card">
                   <h3 class="card-header text-center">Básico</h3>
                   <div class="card-body">
                     <h2 class="text-center font-weight-bold">$ 10.00</h2>
-                    <div class="font-italic">per month</div>
+                    <div class="font-italic text-center">Incluye:</div>
                   </div>
                   <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Cras justo odio</li>
-                    <li class="list-group-item">Dapibus ac facilisis in</li>
-                    <li class="list-group-item">Vestibulum at eros</li>
-                    <li class="list-group-item">
-                      <a href="#" class="btn btn-primary">Sign Up!</a>
-                    </li>
+                    <li class="list-group-item">Ingreso al evento</li>
+                    <li class="list-group-item">Swag Completo</li>
+                    <li class="list-group-item">Diploma de participación</li>
                   </ul>
                 </div>
               </div>
+
               <div class="col-md-4 mb-4">
-                <div class="card h-100">
+                <div class="card">
                   <h3 class="card-header text-center">Plus</h3>
-                  <div class="card-body">
+                  <div class="card-body m-0 px-0">
                     <h2 class="text-center font-weight-bold">$ 40.00</h2>
-                    <div class="font-italic">per month</div>
+                    <div class="font-italic text-center">Incluye:</div>
                   </div>
                   <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Cras justo odio</li>
-                    <li class="list-group-item">Dapibus ac facilisis in</li>
-                    <li class="list-group-item">Vestibulum at eros</li>
-                    <li class="list-group-item">
-                      <a href="#" class="btn btn-primary">Sign Up!</a>
-                    </li>
+                    <li class="list-group-item ">Ingreso al evento</li>
+                    <li class="list-group-item ">Swag Completo</li>
+                    <li class="list-group-item ">Diploma de participación</li>
+                    <li class="list-group-item ">Almuerzos</li>
+
                   </ul>
                 </div>
               </div>
               <div class="col-md-4 mb-4">
-                <div class="card h-100">
+                <div class="card">
                   <h3 class="card-header text-center">Ultra</h3>
-                  <div class="card-body">
+                  <div class="card-body m-0 px-0">
                     <h2 class="text-center font-weight-bold">$ 150.00</h2>
-                    <div class="font-italic">per month</div>
+                    <div class="font-italic text-center">Incluye:</div>
                   </div>
                   <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Cras justo odio</li>
-                    <li class="list-group-item">Dapibus ac facilisis in</li>
-                    <li class="list-group-item">Vestibulum at eros</li>
-                    <li class="list-group-item">
-                      <a href="#" class="btn btn-primary">Sign Up!</a>
-                    </li>
+                    <li class="list-group-item ">Ingreso al evento</li>
+                    <li class="list-group-item ">Swag Completo</li>
+                    <li class="list-group-item ">Diploma de participación</li>
+                    <li class="list-group-item ">Comida [Tres Tiempos]</li>
+                    <li class="list-group-item ">Hospedaje</li>
+                    <li class="list-group-item ">Transporte</li>
                   </ul>
                 </div>
               </div>
             </div>
+            <p class="text-justify">La organización brindará información sobre hoteles cercanos a la sede para quienes la requieran,
+              como una cortesía. Sin embargo, no se hará responsable de traslados ni depósitos de garantía que
+              deban realizar quienes elijan la cuota parcial.</p>
             <!-- /.row -->
           </div>
 
           <div id="paquete-en-swag" class="right-block">
-            <h4 class="display-6 font-italic font-weight-bold">Paquetes en Swag:</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, et temporibus, facere perferendis veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate dolores iure maxime ducimus fugit.Quis
-              anim sit do amet fugiat dolor velit sit ea ea do reprehenderit culpa duis. Nostrud aliqua ipsum fugiat minim proident occaecat excepteur aliquip culpa aute tempor reprehenderit. Deserunt tempor mollit elit ex pariatur dolore velit fugiat
-              mollit culpa irure ullamco veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate dolores iure maxime ducimus fugit.Quis anim sit do amet fugiat dolor velit sit ea ea do reprehenderit culpa
-              duis. Nostrud aliqua ipsum fugiat minim proident occaecat excepteur aliquip culpa aute tempor reprehenderit. Deserunt tempor mollit elit ex pariatur dolore velit fugiat mollit culpa irure ullamco veniam beatae non debitis, numquam blanditiis
-              necessitatibus vel mollitia dolorum laudantium, voluptate dolores iure maxime ducimus fugit.Quis anim sit do amet fugiat dolor velit sit ea ea do reprehenderit culpa duis. Nostrud aliqua ipsum fugiat minim proident occaecat excepteur aliquip
-              culpa aute tempor reprehenderit. Deserunt tempor mollit elit ex pariatur dolore velit fugiat mollit culpa irure ullamco veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate dolores iure
-              maxime ducimus fugit.</p>
+            <h4 class="display-6 font-italic font-weight-bold">Paquetes en Swag</h4>
+            <div class="row">
+
+              <div class="col-md-6 mb-4">
+                <div class="card">
+                  <h3 class="card-header text-center">Básico</h3>
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item ">Camiseta.</li>
+                    <li class="list-group-item ">Gafete con NFC.</li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="col-md-6 mb-4">
+                <div class="card">
+                  <h3 class="card-header text-center">Completo</h3>
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item ">Camiseta.</li>
+                    <li class="list-group-item ">Gafete con NFC.</li>
+                    <li class="list-group-item ">Sticker en vinil del evento.</li>
+                    <li class="list-group-item ">Recuerdo de evento (Artesania nacional).</li>
+                  </ul>
+              </div>
+
+
+            </div>
+          </div>
           </div>
 
           <div id="forma-de-pago" class="right-block">
-            <h4 class="display-6 font-italic font-weight-bold">Forma de Pago:</h4>
+            <h4 class="display-6 font-italic font-weight-bold">Forma de Pago</h4>
             <p>Proximamente estaremos informando sobre los medios oficiales de pago de la cuota de inscripción al evento.</p>
           </div>
 
           <div id="formas-de-participacion" class="right-block">
-            <h4 class="display-6 font-italic font-weight-bold">Formas de Participación:</h4>
+            <h4 class="display-6 font-italic font-weight-bold">Formas de Participación</h4>
             <p>Proximamente estaremos informando sobre los medios oficiales de participación en el ECSL con mayor detalle..</p>
           </div>
 
         </div>
       </div>
+
     </div>
     <!-- /.row -->
+
   </div>
   <!-- /.container -->
 
-    <!-- back-to-top-botton-->
-    <div>
-    <span class="back-to-top"><i class="fa fa-arrow-circle-up"></i></span>
+  <!-- Pie de Pagina -->
+  <div class="">
+  <footer class="py-5 bg-dark">
+    <div class="container">
+      <p class="m-0  text-white">
+        <img src="img/Logo.png" width="70" height="40" class="d-inline-block" alt=""> X Encuentro Centroamericano de Software Libre
+      </p>
+      <p class="m-0 text-center text-white">Copyright &copy; ECSL 2018</p>
     </div>
-
-    <!-- Pie de Pagina -->
-    <footer id="pie" class="py-5 bg-dark">
-      <div class="container">
-        <p class="m-0  text-white">
-          <img src="img/Logo.png" width="70" height="40" class="d-inline-block" alt=""> X Encuentro Centroamericano de Software Libre
-        </p>
-        <p class="m-0 text-center text-white">Copyright &copy; ECSL 2018</p>
-      </div>
-    </footer>
+  </footer>
+</div>
 
 
   <!-- Bootstrap core JavaScript -->
